...
  String frequency;
  String duration;
  String timetype;
  String details;
  DateTime created;

  Donation(
      this.id,
      this.recipientName,
      this.recipientAccount,
      this.category,
      this.currency,
      this.amount,
...
    token = _authProvider.token;
    super.initState();
  }

  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Text('My Donations'), actions: <Widget>[
        IconButton(
          icon: const Icon(Icons.add),
          tooltip: 'New Donation',
          onPressed: () {
            Navigator.push(context,
                MaterialPageRoute(builder: (context) => DonationPage()));
...
